tests/integration/snapshots/main__integration__sequence__noargs_single_positional.snap
---
source: tests/integration/sequence.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: Missing required fields:

Sources:
  cli --settings.*
  defaults

strings  ❌ MISSING <LeafSchema { kind: Scalar(String), shap 
         e: Shape { type_identifier: "String", ty: User(Opa
         que), layout: Sized(«24 align 8»), def: Scalar, ..
          } }>

Run with --help for usage information.
